[gd_scene load_steps=9 format=3 uid="uid://cau22vjxolrfi"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_o85pd"]
[ext_resource type="Texture2D" uid="uid://c07svo3m7ipwa" path="res://graphics/backgrounds/main_menu_background.png" id="2_fmivl"]
[ext_resource type="AudioStream" uid="uid://cn6vj4ev410qa" path="res://audio/169157__joniheinonen__weather-thunder-heavy-thunder-medium-rain-courtyard-echoes-0001.wav" id="3_vow57"]
[ext_resource type="AudioStream" uid="uid://dnbw5nfw2w50y" path="res://audio/368707__d_a_g_a_z__bass-pad.wav" id="4_5cbxa"]
[ext_resource type="PackedScene" uid="uid://dbl5blkk2ca5w" path="res://components/transition_scene.tscn" id="4_pu7t5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hlyu"]
bg_color = Color(0.87451, 0.796078, 0, 1)

[sub_resource type="Theme" id="Theme_8nn8v"]
Button/styles/hover = SubResource("StyleBoxFlat_7hlyu")

[sub_resource type="Theme" id="Theme_ymnn0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8nn8v")
script = ExtResource("1_o85pd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -106.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fmivl")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color(0.337255, 0.470588, 0.780392, 0.682353)
position = Vector2(919, -10)
scale = Vector2(10, 5)
amount = 100
speed_scale = 7.14
emission_shape = 2
emission_sphere_radius = 104.31
scale_amount_min = 0.0
scale_amount_max = 15.0
anim_speed_min = 10.0
anim_speed_max = 20.0

[node name="TransitionScene" parent="." instance=ExtResource("4_pu7t5")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1073.0
offset_top = 4.0
offset_right = 1922.0
offset_bottom = 105.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ymnn0")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit To Desktop"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(912, -73)
stream = ExtResource("3_vow57")
volume_db = 24.0
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(938, -67)
stream = ExtResource("4_5cbxa")
volume_db = 0.724
autoplay = true
panning_strength = 1.33
bus = &"mainmenu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
